js click page jump fix

--- a/plugins/sexy-woo-song-links/assets/css/styles.css
+++ b/plugins/sexy-woo-song-links/assets/css/styles.css
@@ -24,7 +24,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-top: 140px;
+  padding: 140px 0 70px 0;
   margin-top: -80px;
 }
 
